function ultimiEstretti wip

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="shortcut icon" href="assets/img/icon.png" />
   </head>
   <body>
+    <div class="container">
+      <h1>TOMBOLA</h1>
+      <!-- Sezione estrazione numeri -->
+      <section id="estrattore">
+        <div id="estrai">
+          <button type="button" id="btnEstrai">Estrai</button>
+          <div id="numeroEstratto" class="hidden"></div>
+        </div>
+        <div id="estratti"></div>
+      </section>
+
+      <!-- Sezione tabellone vero e proprio -->
+      <div id="tabellone">
+        <!-- <div>
+          1
+          <span class="extracted"></span>
+        </div> -->
+      </div>
+
+      <!-- <div id="tabelline"></div> -->
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
