--- a/index.html
+++ b/index.html
@@ -23,11 +23,21 @@
       <div id="tabellone">
         <!-- <div>
           1
-          <span class="extracted"></span>
+          <span></span>
         </div> -->
       </div>
 
-      <!-- <div id="tabelline"></div> -->
+      <section id="playerSection">
+        <input
+          type="number"
+          min="0"
+          max="3"
+          id="numberCartelle"
+          placeholder="Numero di cartelline"
+        />
+        <button>Conferma</button>
+        <div id="tabelline"></div>
+      </section>
     </div>
 
     <script src="assets/js/script.js"></script>
